--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "dev": "nodemon"
   },
   "dependencies": {
+    "aws-sdk": "^2.320.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "formidable": "^1.2.1",
     "jsonwebtoken": "^8.3.0",
     "mysql2": "^1.6.1",
     "nodemon": "^1.18.4"
