--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.3",
     "formidable": "^1.2.1",
     "jsonwebtoken": "^8.3.0",
+    "mailgun-js": "^0.21.0",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.1",
     "nodemon": "^1.18.4",
