--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formidable": "^1.2.1",
     "jsonwebtoken": "^8.3.0",
     "mailgun-js": "^0.21.0",
+    "moment": "^2.22.2",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.1",
     "nodemon": "^1.18.4",
