refactor/fix: Mail, Meetup, Mentor service HTTP status codes and travis
Mail service meetup confirmation email send
Meetup service meetup confirmation and refusal improvements
Wrong HTTP status codes when there is an error
Travis config improvements

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ deploy:
     app: "api"
     env: "api-mpv"
     bucket_name: "$AWS_S3BUCKET"
-    zip_file: 'deploy/api.zip'
+    zip_file: 'deploy/api-$TRAVIS_JOB_ID.zip'
