--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "formidable": "^1.2.1",
+    "google-auth-library": "^2.0.2",
     "jsonwebtoken": "^8.3.0",
     "mailgun-js": "^0.21.0",
     "moment": "^2.22.2",
