--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
+    "@types/gapi": "^0.0.36",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/mailgun-js": "^0.16.3",
     "@types/morgan": "^1.7.35",
@@ -30,7 +31,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "formidable": "^1.2.1",
-    "google-auth-library": "^2.0.2",
+    "googleapis": "^37.2.0",
     "jsonwebtoken": "^8.3.0",
     "mailgun-js": "^0.21.0",
     "moment": "^2.22.2",
